feature: add di container fx
